--- a/mobile_stylesheet.css
+++ b/mobile_stylesheet.css
@@ -1,17 +1,19 @@
 @media only screen and (max-device-width: 480px) {
 
-.container-fluid {
-	padding-left: 0px;
-}
+/*.container-fluid {
+	padding-left: 75px;
+    margin-top: 350px;
+}*/
 
     div.diy-slideshow{
 
-/*   display: block; */
-   overflow: hidden; 
-      width: 90%;
-    margin-left: 10%;
-      height: 1152px;
-     z-index: -1;
+/*display: block; */
+    overflow: hidden;
+    width: 100%;
+    margin-left: 0%;
+        margin-top: 50%;
+    height: auto;
+    z-index: -1;
     transform: scale(1.3);
 }
 
@@ -42,7 +44,7 @@ figure.show{
 
 div.DJ_Name {
     position: fixed;
-    top: 23em;
+    top: 37em;
     left: 1.8em;
     width: 75%;
     font-family: 'Jura', sans-serif;
@@ -58,6 +60,12 @@ div.DJ_Name span {
   cursor: pointer;
 }
 
+
+div.galleryBtn.homeToGallery {
+    bottom: 0em;
+    right: -6em;
+
+  }
 img.bio_3box{
 
    top: 70em;
