--- a/mobile_stylesheet.css
+++ b/mobile_stylesheet.css
@@ -1,60 +1,28 @@
 @media only screen and (max-device-width: 480px) {
 
-/*.container-fluid {
+.container-fluid {
 	padding-left: 75px;
     margin-top: 350px;
-}*/
-
-    div.diy-slideshow{
-
-/*display: block; */
-    overflow: hidden;
-    width: 100%;
-    margin-left: 0%;
-        margin-top: 50%;
-    height: auto;
-    z-index: -1;
-    transform: scale(1.3);
 }
 
 
-
-img .homeSlide  {
-        width: 90%;
-    margin-left: 5%;
-    margin-top: 5%;
-    /*centering with spaces on sides*/
-      margin-top: -100px;
-      height: auto;
-}
-
-figure{
-  position: absolute;
-  opacity: 0;
-  transition: 1s opacity;
-}
-
-figure.show{
-  opacity: 1;
-  position: absolute;
-  transition: 1s opacity;
-}
 
 
 
 div.DJ_Name {
-    position: fixed;
+position: absolute;
     top: 37em;
     left: 1.8em;
     width: 75%;
     font-family: 'Jura', sans-serif;
     font-weight: 600;
-    color: white;
+    color: black;
     font-size: 2em;
     cursor: pointer;
     z-index: 9001;
 }
 div.DJ_Name span {
+  color: black;
   font-size: 2em;
   font-weight: 600;
   cursor: pointer;
@@ -73,25 +41,25 @@ img.bio_3box{
 }
 
 div.bioTextWrapper {
-    width: 100%;
-    height: auto;
+    width: 90%;
+    height: 870px;
     margin: 0;
-    padding-left: 25%;
-    padding-right: 25%;
+    padding-left: 10%;
+    padding-right: 10%;
     /* border: 1px solid black; */
     text-align: center;
     font-family: 'Jura', sans-serif;
     font-weight: 400;
-    font-size: 1.7em;
+    font-size: 1.1em;
     color: black;
     position: absolute;
-    top: -5em;
+    top: 5%;
+    display: none;
 }
 
 
 
-
-div.menuWrapper {
+/*div.menuWrapper {
      width: 62%;
     height: 250px;
     display: flex;
@@ -99,7 +67,7 @@ div.menuWrapper {
     position: absolute;
     top: 100em;
     left: 19%;
-}
+}*/
 
 div.box {
   width : 250px;
