--- a/mobile_stylesheet.css
+++ b/mobile_stylesheet.css
@@ -116,4 +116,10 @@ position: relative;
 div.lg-hide-items .lg-toolbar {
   opacity: 1;
 }
+	
+	.section,
+.section .fp-slide,
+.section .fp-tableCell{
+    height: auto !important;
+}
 	}
