--- a/mobile_stylesheet.css
+++ b/mobile_stylesheet.css
@@ -1,106 +1,159 @@
-@media only screen and (max-device-width: 480px) {
-    /*.container-fluid {
-  padding-left: 75px;
+body {
+    overflow: hidden;
+    overflow-x: hidden;
+    width: 100%;
+}
 
-}*/
-    div.diy-slideshow {
-        margin-left: -15%;
-        height: 870px;
-        margin-top: 50%;
-    }
-    div.DJ_Name {
-        position: absolute;
-        top: 36em;
-        left: 1em;
-        width: 75%;
-        font-family: 'Jura', sans-serif;
-        font-weight: 600;
-        color: black;
-        font-size: 2em;
-        cursor: pointer;
-        z-index: 9001;
-    }
-    div.DJ_Name span {
-        color: black;
-        font-size: 2em;
-        font-weight: 600;
-        cursor: pointer;
-    }
-    div.galleryBtn.homeToGallery {
-        bottom: 0;
-        right: -6em;
-        color: black;
-        border-top: 0.3rem solid black;
-        border-left: 0.3rem solid black;
-        border-bottom: 0.3rem solid black;
-        border-right: 0.3rem solid black;
-        border-radius: 25px;
-    }
-    img.bio_3box {
-        top: 70em;
-    }
-    div.bioTextWrapper {
-        width: 90%;
-        height: 870px;
-        margin: 0;
-        padding-left: 10%;
-        padding-right: 10%;
-        /* border: 1px solid black; */
-        text-align: center;
-        font-family: 'Jura', sans-serif;
-        font-weight: 400;
-        font-size: 2.2em;
-        color: black;
-        position: absolute;
-        top: 5%;
-        display: none;
-    }
-    div.menuWrapper {
-        width: 75%;
-        height: 250px;
-        display: none;
-        justify-content: space-around;
-        position: absolute;
-        top: 90em;
-        left: 15%;
-        z-index: 9999;
-    }
-    div.box {
-        width: 250px;
-        height: 250px;
-        /*  border: 1px solid black;*/
-        text-align: center;
-        line-height: 250px;
-        cursor: pointer;
-        overflow: hidden;
-    }
-    div.box img {
-        width: 100%;
-        height: 100%;
-        position: relative;
-        transform: scale(1);
-    }
-    div.galleryTitle {
-        position: relative;
-        top: 0em;
-        font-size: 2em;
-    }
-    div.sketchTitle {
-        position: relative;
-        top: 0em;
-        font-size: 2em;
-    }
-    div.websiteTitle {
-        position: relative;
-        top: 0em;
-        font-size: 2em;
-    }
-    div.lg-hide-items .lg-toolbar {
-        opacity: 1;
-    }
-    .section,
-    .section .fp-slide,
-    .section .fp-tableCell {
-        height: auto !important;
-    }
+div.diy-slideshow {
+    margin-left: -15%;
+    height: 870px;
+    margin-top: 50%;
+    overflow: hidden;
+}
+
+div.diy-slideshow.mobileHomePage {
+    margin-left: -15%;
+    height: 870px;
+    margin-top: 50%;
+    overflow: hidden;
+}
+
+figure {
+    position: absolute;
+    opacity: 0;
+    transition: 1s opacity;
+    width: 140%;
+    top: 40%;
+    left: -5%;
+}
+
+figure.show {
+    opacity: 1;
+    position: absolute;
+    transition: 1s opacity;
+}
+
+div.DJ_Name {
+    position: absolute;
+    top: 32.5em;
+    left: 1em;
+    width: 125%;
+    font-family: 'Jura', sans-serif;
+    font-weight: 600;
+    color: black;
+    font-size: 1.3em;
+    cursor: pointer;
+}
+
+div.DJ_Name span {
+    color: black;
+    font-size: 2em;
+    font-weight: 600;
+    cursor: pointer;
+}
+
+div.galleryBtn.homeToGallery {
+    position: absolute;
+    color: black;
+    font-size: 1em;
+    padding: 0.3em;
+    bottom: 0em;
+    left: 19.5em;
+    width: 28%;
+    border: 0.2rem solid black;
+    border-radius: 25px;
+    /* transform: scale(0.5); */
+}
+
+img.bio_3box {
+    top: 70em;
+}
+
+div.bioTitle {
+    font-size: 2em;
+    font-weight: 600;
+}
+
+div.bioTextWrapper {
+    width: 120%;
+    height: 870px;
+    margin-top: 36em;
+    left: 1em;
+    text-align: center;
+    font-family: 'Jura', sans-serif;
+    font-weight: 400;
+    font-size: 1.6em;
+    color: black;
+    position: absolute;
+    top: 30%;
+    display: none;
+    overflow: hidden;
+}
+
+div.diy-slideshow.bio {
+    overflow: hidden;
+    width: 100%;
+    margin-left: 0;
+    height: 870px;
+    z-index: -1;
+}
+
+div.menuWrapper {
+    width: 75%;
+    height: 250px;
+    display: none;
+    justify-content: space-around;
+    position: absolute;
+    top: 90em;
+    left: 15%;
+}
+
+div.box {
+    width: 250px;
+    height: 250px;
+    /*  border: 1px solid black;*/
+    text-align: center;
+    line-height: 250px;
+    cursor: pointer;
+    overflow: hidden;
+}
+
+div.box img {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform: scale(1);
+}
+
+div.galleryTitle {
+    position: relative;
+    top: 0em;
+    font-size: 2em;
+}
+
+div.sketchTitle {
+    position: relative;
+    top: 0em;
+    font-size: 2em;
+}
+
+div.websiteTitle {
+    position: relative;
+    top: 0em;
+    font-size: 2em;
+}
+
+div.lg-hide-items .lg-toolbar {
+    opacity: 1;
+}
+
+.section,
+.section .fp-slide,
+.section .fp-tableCell {
+    height: auto !important;
+    overflow: hidden;
+}
+
+.section.sketchPageMobile {
+    overflow: visible;
 }
