--- a/mobile_stylesheet.css
+++ b/mobile_stylesheet.css
@@ -23,9 +23,9 @@ figure {
     position: absolute;
     opacity: 0;
     transition: 1s opacity;
-    width: 140%;
+    width: 175%;
     top: 40%;
-    left: -5%;
+    left: 0%;
 }
 
 figure.show {
@@ -36,17 +36,13 @@ figure.show {
 
 div.DJ_Name {
     position: absolute;
-    top: 32.5em;
+    top: 37.5em;
     left: 1em;
     width: 125%;
     font-family: 'Jura', sans-serif;
     font-weight: 600;
     color: black;
-<<<<<<< HEAD
-    font-size: 1em;
-=======
     font-size: 1.3em;
->>>>>>> gh-pages
     cursor: pointer;
 }
 
@@ -58,13 +54,13 @@ div.DJ_Name span {
 }
 
 div.galleryBtn.homeToGallery {
-    position: absolute;
+      position: absolute;
     color: black;
     font-size: 1em;
-    padding: 0.3em;
+    padding: 0.5em;
     bottom: 0em;
-    left: 19.5em;
-    width: 28%;
+    left: 27.5em;
+    width: 30%;
     border: 0.2rem solid black;
     border-radius: 25px;
     /* transform: scale(0.5); */
@@ -80,10 +76,10 @@ div.bioTitle {
 }
 
 div.bioTextWrapper {
-    width: 120%;
+    width: 142%;
     height: 870px;
-    margin-top: 36em;
-    left: 1em;
+    margin-top: 42em;
+    left: 2.7em;
     text-align: center;
     font-family: 'Jura', sans-serif;
     font-weight: 400;
@@ -152,9 +148,89 @@ div.lg-hide-items .lg-toolbar {
     opacity: 1;
 }
 
+
+div.diy-slideshow.aboutMe {
+    overflow: hidden;
+    width: 90%;
+    margin-left: 5%;
+    height: auto;
+    z-index: -1;
+    text-align: center;
+}
+
+div.aboutMeWrapper {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
+div.left {
+    width: 50%;
+  width: 50%;
+    float: left;
+    text-align: center;
+    left: -2em;
+    position: relative;
+}
+
+.aboutMebox img {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform: scale(0.8);
+}
+
+div.zanzoImg {
+    height: inherit;
+    margin-top: 51px;
+}
+
+img.aboutMeImg {
+    height: 290px;
+    cursor: pointer;
+    transform: scale(0.8);
+}
+
+div.right {
+    position: absolute;
+    width: 100%;
+    /* float: right; */
+    left: 9em;
+    text-align: center;
+    font-family: 'Jura', sans-serif;
+    font-weight: 400;
+    font-size: 1.8em;
+    color: black;
+    /*  border: 1px solid black;*/
+}
+
+div.aboutMeRightWrapper {
+    /* position: absolute; */
+    width: 93%;
+    margin-top: 32%;
+    margin-left: -15%;
+    /* border-left: 2px solid black; */
+    left: 0;
+}
+
+div.right h1 {
+    font-size: 2.5em;
+}
+
+.socialLinkWrapper {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.socialLink {
+    transform: scale(0.3);
+}
+
 .section,
 .section .fp-slide,
 .section .fp-tableCell {
     height: auto !important;
-    overflow: hidden;
+    
 }
