--- a/mobile_stylesheet.css
+++ b/mobile_stylesheet.css
@@ -63,7 +63,7 @@ div.galleryBtn.homeToGallery {
     width: 30%;
     border: 0.2rem solid black;
     border-radius: 25px;
-    text-align: center;
+padding-left: 0.8em;
     /* transform: scale(0.5); */
 }
 
